<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="@dimen/scroll_bar_size"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbars="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/user_identification"
                android:textColor="@color/text_color_bold"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/text_color_normal"
                tools:text=" LoreumIpsum@LI.com" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adddress"
                android:textColor="@color/text_color_normal" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/text_color_normal"
                tools:text="@string/phone_number" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/company_name"
                android:textColor="@color/text_color_normal" />

            <TextView
                android:id="@+id/tvWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/website"
                android:textColor="@color/text_color_normal" />

            <Button
                android:id="@+id/buttonShowPosts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_posts_button" />
        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/tvSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_user"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/rlPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="@dimen/scroll_bar_size"
            android:scrollbarThumbVertical="@color/colorAccent"
            android:scrollbars="vertical" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_small" />
    </RelativeLayout>
</LinearLayout>